--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-element-dropdown": "^2.5.3",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-mask-text": "^0.13.1",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.1.2",
