--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.1.2",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "react-native-shadow": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
