--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smartmecanico",
-  "version": "1.0.0",
+  "version": "6.2.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -17,6 +17,7 @@
     "expo-linear-gradient": "^12.0.1",
     "expo-status-bar": "~1.4.2",
     "moment": "^2.29.4",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-element-dropdown": "^2.5.3",
@@ -26,9 +27,12 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.1.2",
+    "react-native-radio-buttons-group": "^2.3.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-shadow": "^1.2.2"
+    "react-native-shadow": "^1.2.2",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
