--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "radio-buttons-react-native": "^1.0.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-date-picker": "^4.2.6",
     "react-native-element-dropdown": "^2.5.3",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.8.0",
