--- a/package.json
+++ b/package.json
@@ -9,34 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
-    "expo": "~47.0.9",
-    "expo-linear-gradient": "^12.0.1",
+    "expo": "^47.0.13",
+    "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "moment": "^2.29.4",
-    "radio-buttons-react-native": "^1.0.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-date-picker": "^4.2.6",
     "react-native-element-dropdown": "^2.5.3",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-mask-text": "^0.13.1",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.1.2",
-    "react-native-radio-buttons-group": "^2.3.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-shadow": "^1.2.2",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-svg": "13.4.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.19.3"
+    "react-native-vector-icons": "^9.2.0",
+    "expo-updates": "~0.15.6"
   },
   "private": true
 }
