--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "smartmecanico",
-  "version": "6.2.1",
-  "main": "node_modules/expo/AppEntry.js",
+  "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -14,7 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
-    "expo": "^47.0.13",
+    "expo": "~47.0.12",
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "moment": "^2.29.4",
@@ -31,7 +30,12 @@
     "react-native-screens": "~3.18.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-vector-icons": "^9.2.0",
-    "expo-updates": "~0.15.6"
+    "expo-updates": "~0.15.6",
+    "expo-splash-screen": "~0.17.5",
+    "expo-constants": "~14.0.2"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@babel/core": "^7.12.9"
+  }
 }
