--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/drawer": "^6.5.7",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "expo": "~47.0.12",
+    "expo-checkbox": "~2.2.2",
+    "expo-constants": "~14.0.2",
     "expo-linear-gradient": "~12.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
@@ -26,13 +31,12 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.1.2",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-vector-icons": "^9.2.0",
-    "expo-updates": "~0.15.6",
-    "expo-splash-screen": "~0.17.5",
-    "expo-constants": "~14.0.2"
+    "expo-image-picker": "~14.0.2"
   },
   "private": true,
   "devDependencies": {
