--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-screens": "~3.18.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-vector-icons": "^9.2.0",
-    "expo-image-picker": "~14.0.2"
+    "expo-image-picker": "~14.0.2",
+    "expo-screen-orientation": "~5.0.1"
   },
   "private": true,
   "devDependencies": {
