--- a/eas.json
+++ b/eas.json
@@ -21,6 +21,9 @@
         "appleId": "cosme.alex@gmail.com",
         "ascAppId": "1582824722",
         "appleTeamId": "VF74R327HV"
+      },
+      "android":{
+        "serviceAccountKeyPath":"C:\\Users\\cosme\\Downloads\\pc-api-8334722257742332344-457-887cfb52d60e.json"
       }
     }
   }
