--- a/eas.json
+++ b/eas.json
@@ -6,13 +6,19 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "channel": "development",
+      "android": {
+        "buildType": "apk"
+      }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "channel": "preview"
     },
     "production": {
-      "autoIncrement": false
+      "autoIncrement": true,
+      "channel": "production"
     }
   },
   "submit": {
@@ -23,7 +29,7 @@
         "appleTeamId": "VF74R327HV"
       },
       "android": {
-        "serviceAccountKeyPath": "C:\\Users\\cosme\\Downloads\\pc-api-8334722257742332344-457-887cfb52d60e.json"
+        "serviceAccountKeyPath": "C:\\Source\\keystore\\pc-api-8334722257742332344-457-887cfb52d60e.json"
       }
     }
   }
